--- a/BBets.Rmd
+++ b/BBets.Rmd
@@ -48,6 +48,21 @@ The function will be given a class_size by number of students, odds, and Number_
 
 <!--Decide on your methods:  In this section explain the approach you will take to attack the issue --- how will you decide on a likely estimate of professor Brownlow's earnings or losses after 637 bets. Also explain how you construct a 95% confidence interval about your estimate of his winnings !-->
 
+```{r}
+numClass=35
+odds=2
+countoDo=50
+varstore=numeric()
+for(i in 1:100){
+brownlow <-BrLw(numClass,odds,countoDo)
+varstore[i]=brownlow}
+print(mean(varstore))
+```
+
+```{r}
+hist(varstore)
+
+```
 
 
 
