--- a/BBets.Rmd
+++ b/BBets.Rmd
@@ -105,10 +105,10 @@ hist(varstore)
 
 ```
 
-For a class size of 35 students the payout would be about $0.71 per class with the odds of 4.25 to 1.  
+For a class size of 35 students the payout would be about $4.25.  
 
 # Discussion and Conclusion
 
 <!--Discussion and conclusion here.  If professor Brownlow is consistantly making or losing money how could he change his payout so that his profits center on zero?  Also discuss what size his class should be in order to have his current scheme balance at zero profit.!-->
 
-
+For a class of 35 students with 2 to 1 odds Dr. J makes 22 bucks a class. The class size that will make the payout fair is 29 students. The fair odds for a bet on matching birthdays in a 35 person class is $4.25.
